simple map component

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
 
-- make into git repository and push to github
-- render grid
+D - make into git repository and push to github
+D - render grid
 - zoom and pan with mouse
 - with keyboard
